# VirtualEnvironment

./: .gitignore  README.md  hello.py  main.py  pyproject.toml
src/my_package/: core.py  helpers.py  main.py  settings.py  tools.py
